*
* 0.2.16
*

- Implemented user authentification by certificates
- Management packs fully functional - templates, events, and SNMP traps
  can be exported and imported
- Cluster monitoring improved
- Node names resolution working
- Implemented OCI based driver for Oracle database
- Windows console:
	- Added layer 2 topology view for compatible switches
	- Object search improved
	- Graphs improved:
		- Area graphs
		- Predefined graphs
		- Minor UI improvements
	- Added possibility to manage/unmanage set of child objects
	- Added possibility to hide unmanaged leaf objects
	- Container objects can be placed above all others
	- Other small UI improvements
- Fixed issues: #90, #106, #143, #147, #148, #149, #150, #152, #153, #155


*
* 0.2.15
*

- Added initial support for cluster monitoring
- Added preliminary support for management packs
- Added SNMP proxy functionality to agent
- IPSO agent improved
- Added Extended Checksum subagent
- Added ODBC Query subagent
- New agent parameters: Process.CountEx(), File.Time.Access(),
  File.Time.Change(), and File.Time.Modify()
- Parameters File.Size() and File.Count() improved
- Parameters Process.XXX improved 
- NXSL improved: implemented switch ... case statement and break statement
- Windows console:
	- Now able to download and install update from web server pointed
	  by NetXMS management server
	- Object browser improved
	- Graphs improved: implemented printing and "copy to clipboard"
	  function
	- Added server history in login dialog
	- Added option "hide empty values" in last DCI values view
- Fixed issues: #105, #123, #131, #135, #140, #142, #145


*
* 0.2.14
*

- Alarm system improved (three state alarms, helpdesk status, etc.)
- Added new DCI data source: push agents
- Threshold state now saved across NetXMS server restarts
- Added possibility to specify custom threshold rearm event instead of
  SYS_THRESHOLD_REARMED
- Added threshold processing option "Always process all thresholds"