@@ -8,6 +8,7 @@
 - Cluster monitoring improved
 - Node names resolution working
 - Implemented OCI based driver for Oracle database
+- UPS subagent: added support for Microdowell devices
 - Windows console:
 	- Added layer 2 topology view for compatible switches
 	- Object search improved
